<resources>
    <string name="app_name">Угадай число!</string>
    <string name="behind">Недолет!</string>
    <string name="ahead">Перелет!</string>
    <string name="hit">В точку!</string>
    <string name="input_value">Ввести значение</string>
    <string name="play_more">Сыграть еще</string>
    <string name="try_to_guess">Попробуйте угадать число (1 – 100)</string>
    <string name="error">Неверный ввод!</string>
    <string name="easy">Легко(до 10)</string>
    <string name="average">Средне (до 100)</string>
    <string name="hard">Сложно (до 1000)</string>
    <string name="exit">Выход</string>
</resources>
